samples/_failures_safe/1761621677_2763cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f47bde3.c: In function ‘main’:
./samples/SAFE/__tmp_9f47bde3.c:161:17: error: ‘operation’ undeclared (first use in this function)
  161 |                 operation
      |                 ^~~~~~~~~
./samples/SAFE/__tmp_9f47bde3.c:161:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9f47bde3.c:161:26: error: expected ‘;’ at end of input
  161 |                 operation
      |                          ^
      |                          ;
./samples/SAFE/__tmp_9f47bde3.c:161:17: error: expected declaration or statement at end of input
  161 |                 operation
      |                 ^~~~~~~~~
./samples/SAFE/__tmp_9f47bde3.c:161:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f47bde3.c:161:17: error: expected declaration or statement at end of input
